sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: '<-' expected but '=' found.
		for(i=0,i++,i<getNombreValeurs()){
                     ^AlgBubbleSort1:18: error: illegal start of simple expression
    }
    ^AlgBubbleSort1:20: error: 'while' expected but identifier found.
    While( swapped==true)
    ^AlgBubbleSort1:22: error: '(' expected but '}' found.
}
^